--- a/demo_app/Gemfile
+++ b/demo_app/Gemfile
@@ -22,6 +22,7 @@ gem 'jquery-rails', '2.0.0'
 group :test do
   gem 'capybara', '1.1.2'
   gem 'spork', '0.9.0'
+  gem 'factory_girl_rails', '1.4.0'
 end
 
 group :production do
